# cloud-apps

./: .clang-format  CMakeLists.txt  FetchAzureSDK.cmake  README.md  format-source.sh
.devcontainer/: Dockerfile  devcontainer.json
App/: CMakeLists.txt
App/Cloud/: CMakeLists.txt
App/Cloud/Include/: Cloud.h
App/Cloud/Source/: Cloud.c
App/cloud-provision/: CMakeLists.txt
App/cloud-provision/Include/: File.h
App/cloud-provision/Source/: File.c  main.c
App/cloud-send/: CMakeLists.txt
App/cloud-send/Source/: main.c
